# ghmap

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: github-events-check.yml  python-package.yml
ghmap/: cli.py
ghmap/config/: github_action_2015-01-01T00:00:00Z.json  github_action_20150101T000000Z.json  github_action_2025-10-08T16:59:23Z.json  github_action_20251008T165923Z.json  github_activity_2015-01-01T00:00:00Z.json  github_activity_20150101T000000Z.json  github_activity_2025-10-08T16:59:23Z.json  github_activity_20251008T165923Z.json
ghmap/mapping/: action_mapper.py
ghmap/preprocess/: event_processor.py
tests/: test_cli.py
tests/data/: custom-event-to-action.json
