[build-system]
requires = ["setuptools >= 62.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghmap"
version = "2.0.1"
license = { text = "MIT License" }
authors = [{ name = "Youness Hourri", email = "youness.hourri@umons.ac.be" }]
description = "GitHub event mapping tool"
readme = { file = "README.md", content-type = "text/markdown" }
urls = { Homepage = "https://github.com/uhourri/ghmap" }
requires-python = ">= 3.10"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
ghmap = "ghmap.cli:main"

[tool.setuptools]
packages = ["ghmap", "ghmap.preprocess", "ghmap.mapping"]

[tool.setuptools.package-data]
ghmap = ["config/event_to_action.json", "config/action_to_activity.json"]

[tool.coverage.run]
branch = true
source = ["ghmap"]
omit = [
    "*/__init__.py",
]
patch = ["subprocess"]
